finised simple UI and working on backend

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,5 @@
-<div class="flex justify-center items-center h-screen">
-  <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-  <div class="flex justify-center items-center h-screen">
-    <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-    <div class="flex justify-center items-center h-screen">
-      <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-      <div class="flex justify-center items-center h-screen">
-        <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-        <div class="flex justify-center items-center h-screen">
-          <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-          <div class="flex justify-center items-center h-screen">
-            <h1 class="text-4xl text-purple-500 font-bold">Our first app</h1>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<social-header></social-header>
+<main>
+  <social-post-create></social-post-create>
+  <social-post-list></social-post-list>
+</main>
