completed file uploaded module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <social-header></social-header>
 <main>
-  <social-post-create></social-post-create>
-  <social-post-list></social-post-list>
+  <router-outlet></router-outlet>
 </main>
