--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,11 @@
-<mat-toolbar color="primary">Toolbar</mat-toolbar>
+<mat-toolbar color="primary">
+  <span>
+    <a routerLink="/">MiniSocialMedia</a>
+  </span>
+  <span class="spacer"></span>
+  <ul>
+    <li>
+      <a routerLink="/new" mat-button routerLinkActive="mat-accent">New Post</a>
+    </li>
+  </ul>
+</mat-toolbar>
